// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput default read only text input 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-form-control pf-m-readonly"
  >
    <input
      aria-invalid="false"
      aria-label="default read only text input"
      data-ouia-component-id="OUIA-Generated-TextInputBase-5"
      data-ouia-component-type="PF5/TextInput"
      data-ouia-safe="true"
      readonly=""
      type="text"
      value="read only default"
    />
  </div>
</DocumentFragment>
`;

exports[`TextInput disabled text input 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-form-control pf-m-disabled"
  >
    <input
      aria-invalid="false"
      aria-label="disabled text input"
      data-ouia-component-id="OUIA-Generated-TextInputBase-3"
      data-ouia-component-type="PF5/TextInput"
      data-ouia-safe="true"
      disabled=""
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TextInput invalid text input 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-form-control pf-m-error"
  >
    <input
      aria-invalid="true"
      aria-label="invalid text input"
      data-ouia-component-id="OUIA-Generated-TextInputBase-7"
      data-ouia-component-type="PF5/TextInput"
      data-ouia-safe="true"
      type="text"
      value="test input"
    />
    <div
      class="pf-v5-c-form-control__utilities"
    >
      <div
        class="pf-v5-c-form-control__icon pf-m-status"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextInput plain read only text input 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-form-control pf-m-readonly pf-m-plain"
  >
    <input
      aria-invalid="false"
      aria-label="plain read only text input"
      data-ouia-component-id="OUIA-Generated-TextInputBase-6"
      data-ouia-component-type="PF5/TextInput"
      data-ouia-safe="true"
      readonly=""
      type="text"
      value="read only plain"
    />
  </div>
</DocumentFragment>
`;

exports[`TextInput read only text input using isReadOnly 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-form-control"
  >
    <input
      aria-invalid="false"
      aria-label="read only text input"
      data-ouia-component-id="OUIA-Generated-TextInputBase-4"
      data-ouia-component-type="PF5/TextInput"
      data-ouia-safe="true"
      type="text"
      value="read only"
    />
  </div>
</DocumentFragment>
`;

exports[`TextInput simple text input 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-form-control"
  >
    <input
      aria-invalid="false"
      aria-label="simple text input"
      data-ouia-component-id="OUIA-Generated-TextInputBase-2"
      data-ouia-component-type="PF5/TextInput"
      data-ouia-safe="true"
      type="text"
      value="test input"
    />
  </div>
</DocumentFragment>
`;

exports[`TextInput validated text input error 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-form-control pf-m-error"
  >
    <input
      aria-invalid="true"
      aria-label="validated text input"
      data-ouia-component-id="OUIA-Generated-TextInputBase-10"
      data-ouia-component-type="PF5/TextInput"
      data-ouia-safe="true"
      type="text"
      value="test input"
    />
    <div
      class="pf-v5-c-form-control__utilities"
    >
      <div
        class="pf-v5-c-form-control__icon pf-m-status"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
